<resources>
    <string name="app_name">Rhema</string>
    <string name="app_home">Rhema Systems</string>
    <string name="action_settings">Setttings</string>
    <string name="action_about">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Enter Email</string>

    <string name="hint_password">Enter Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="printtest">Print Test</string>
    <string name="check_paper">Enter print error!</string>
    <string name="out_of_paper">Out of paper!Out of paper!</string>
    <string name="bill_number">Bill Number : </string>
    <string name="description">Description : </string>
    <string name="original_account">Original Account : </string>
    <string name="balance">Balance : </string>
    <string name="pay">PAY</string>
    <string name="error_message">An error has occurred. Please try again!!</string>


    <string name="title_mobile_money_confirmation">Mobile Money Payment Confirmation</string>
    <string name="btn_mobile_money_payment_confirm">Confirm Payment</string>
    <string name="btn_mobile_money_payment_cancel">Cancel</string>
</resources>
