<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
xmlns:card_view="http://schemas.android.com/apk/res-auto"
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/card_view"
android:layout_width="match_parent"
android:layout_height="wrap_content"
card_view:cardCornerRadius="4dp"
android:background="@color/white"
android:layout_margin="5dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
    android:id="@+id/cardview_list_title1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:paddingBottom="2dp"
    android:text= "@string/bill_number"
    android:textSize="18sp" />

    <TextView
    android:id="@+id/textViewBillNo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@id/cardview_list_title1"
    android:text=""
    android:textStyle="bold"
    android:textSize="18sp"
    android:paddingBottom="2dp"
    android:textColor="@android:color/black"
    android:layout_toEndOf="@id/cardview_list_title1" />

    <TextView
    android:id="@+id/cardview_list_title2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/textViewBillNo"
    android:paddingBottom="2dp"
    android:paddingTop="2dp"
    android:text="@string/description"
    android:textSize="18sp" />

    <TextView
    android:id="@+id/textViewDescription"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/textViewBillNo"
    android:layout_toRightOf="@id/cardview_list_title2"
    android:text=""
    android:textStyle="bold"
    android:paddingBottom="2dp"
    android:paddingTop="2dp"
    android:textColor="@android:color/black"
    android:layout_toEndOf="@id/cardview_list_title2"
    android:textSize="18sp"/>

    <TextView
    android:id="@+id/cardview_list_title3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/textViewDescription"
    android:paddingBottom="2dp"
    android:paddingTop="2dp"
    android:text="@string/original_account"
    android:textSize="18sp" />

    <TextView
    android:id="@+id/textViewOriginalAcnt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/textViewDescription"
    android:layout_toRightOf="@id/cardview_list_title3"
    android:text=""
    android:textStyle="bold"
    android:paddingBottom="2dp"
    android:paddingTop="2dp"
    android:textColor="@android:color/black"
    android:layout_toEndOf="@id/cardview_list_title3"
    android:textSize="18sp"/>


    <TextView
    android:id="@+id/cardview_list_title4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/textViewOriginalAcnt"
    android:paddingBottom="2dp"
    android:paddingTop="2dp"
    android:text="@string/balance"
    android:textSize="18sp" />

    <TextView
    android:id="@+id/textViewBalance"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/textViewOriginalAcnt"
    android:layout_toRightOf="@id/cardview_list_title4"
    android:text=""
    android:textStyle="bold"
    android:paddingBottom="2dp"
    android:paddingTop="2dp"
    android:textColor="@android:color/black"
    android:layout_toEndOf="@id/cardview_list_title4"
    android:textSize="18sp"/>

    <!--test-->

    <!--<TextView-->
        <!--android:id="@+id/cardview_list_title422"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/contactView"-->
        <!--android:paddingBottom="5dp"-->
        <!--android:paddingTop="5dp"-->
        <!--android:text="Contact : "-->
        <!--android:textSize="14sp" />-->

    <!--<TextView-->
        <!--android:id="@+id/contactView0"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/contactView"-->
        <!--android:layout_toRightOf="@id/cardview_list_title422"-->
        <!--android:text=""-->
        <!--android:textStyle="bold"-->
        <!--android:paddingBottom="5dp"-->
        <!--android:paddingTop="5dp"-->
        <!--android:textColor="@android:color/black" />-->
    <!--<TextView-->
        <!--android:id="@+id/cardview_list_title40"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/contactView0"-->
        <!--android:paddingBottom="5dp"-->
        <!--android:paddingTop="5dp"-->
        <!--android:text="Contact : "-->
        <!--android:textSize="14sp" />-->

    <!--<TextView-->
        <!--android:id="@+id/contactView1"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/contactView0"-->
        <!--android:layout_toRightOf="@id/cardview_list_title40"-->
        <!--android:text=""-->
        <!--android:textStyle="bold"-->
        <!--android:paddingBottom="5dp"-->
        <!--android:paddingTop="5dp"-->
        <!--android:textColor="@android:color/black" />-->
    <!--<TextView-->
        <!--android:id="@+id/cardview_list_title41"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/contactView1"-->
        <!--android:paddingBottom="5dp"-->
        <!--android:paddingTop="5dp"-->
        <!--android:text="Contact : "-->
        <!--android:textSize="14sp" />-->

    <!--<TextView-->
        <!--android:id="@+id/contactView2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/contactView1"-->
        <!--android:layout_toRightOf="@id/cardview_list_title41"-->
        <!--android:text=""-->
        <!--android:textStyle="bold"-->
        <!--android:paddingBottom="5dp"-->
        <!--android:paddingTop="5dp"-->
        <!--android:textColor="@android:color/black" />-->

</RelativeLayout>

</android.support.v7.widget.CardView>
